[gd_scene load_steps=6 format=3 uid="uid://crsjr0pwxi6p3"]

[ext_resource type="Script" uid="uid://cji4rfhgqyep2" path="res://plr/stomper.gd" id="1_bf64q"]
[ext_resource type="Texture2D" uid="uid://bp2g2ughoo0nn" path="res://icon.svg" id="2_35flp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p37r8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7nm7s"]
radius = 46.0435

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf64q"]
size = Vector2(182, 180)

[node name="stomper" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 10
collision_mask = 4
slide_on_ceiling = false
script = ExtResource("1_bf64q")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.390625)
texture = ExtResource("2_35flp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p37r8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7nm7s")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_bf64q")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_body_exited"]
